--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "http://adguard.com",
   "dependencies": {
     "download-file-sync": ">=1.0.4",
-    "qunit": ">=1.0.0"
+    "qunit": ">=1.0.0",
+    "css-selector-parser": "1.3.0"
   },
   "main": "index.js",
   "engines": {
