--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "download-file-sync": ">=1.0.4",
     "qunit": ">=1.0.0",
-    "css-selector-parser": "1.3.0"
+    "css-selector-parser": "1.3.0",
+    "md5": "2.2.1"
   },
   "main": "index.js",
   "engines": {
