--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "dependencies": {
-    "download-file-sync": ">=1.0.4",
+    "child_process": ">=1.0.2",
     "qunit": "1.0.0",
     "css-selector-parser": "1.3.0",
     "md5": "2.2.1"
