--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "child_process": ">=1.0.2",
     "qunit": "1.0.0",
     "css-selector-parser": "1.3.0",
-    "md5": "2.2.1"
+    "md5": "2.2.1",
+    "moment": ">=2.20.1"
   },
   "main": "index.js",
   "engines": {
