--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "qunit": "1.0.0",
     "css-selector-parser": "1.3.0",
     "md5": "2.2.1",
-    "moment": ">=2.20.1"
+    "moment": ">=2.20.1",
+    "graceful-fs": ">=4.1.11"
   },
   "main": "index.js",
   "engines": {
