--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "adguard-filters-compiler",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "dependencies": {
     "child_process": ">=1.0.2",
-    "qunit": "1.0.0",
+    "crypto": "1.0.1",
     "css-selector-parser": "1.3.0",
     "md5": "2.2.1",
-    "moment": ">=2.20.1"
+    "moment": ">=2.20.1",
+    "qunit": "1.0.0",
+    "utf8": "^3.0.0"
   },
   "main": "index.js",
   "engines": {
