--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
-    "css-selector-parser": "1.3.0",
     "md5": "2.2.1",
     "moment": ">=2.20.1",
     "qunit": "1.0.0",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "xmldom": "0.1.27",
+    "sizzle": "2.3.3"
   },
   "main": "index.js",
   "engines": {
