--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "moment": ">=2.20.1",
     "qunit": "1.0.0",
     "utf8": "^3.0.0",
-    "xmldom": "0.1.27",
-    "sizzle": "2.3.3"
+    "xmldom": "0.1.27"
   },
   "main": "index.js",
   "engines": {
