--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "dependencies": {
+    "axios": "^0.18.0",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
+    "jsdom": "11.9.0",
     "md5": "2.2.1",
     "moment": ">=2.20.1",
     "qunit": "1.0.0",
-    "utf8": "^3.0.0",
-    "jsdom": "11.9.0"
+    "utf8": "^3.0.0"
   },
   "main": "index.js",
   "engines": {
