--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "adguard-filters-compiler",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "dependencies": {
+    "ajv": "^6.6.1",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
+    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#a7d2177",
     "jsdom": "13.0.0",
     "md5": "2.2.1",
     "moment": ">=2.20.1",
     "qunit": "1.0.0",
-    "utf8": "^3.0.0",
-    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#a7d2177"
+    "utf8": "^3.0.0"
   },
   "main": "index.js",
   "scripts": {
