--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "dependencies": {
-    "ajv": "^6.6.1",
+    "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
     "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.0.11",
     "jsdom": "13.0.0",
     "md5": "2.2.1",
-    "moment": ">=2.20.1",
+    "moment": "^2.24.0",
     "qunit": "1.0.0",
     "utf8": "^3.0.0"
   },
