--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "md5": "2.2.1",
     "moment": ">=2.20.1",
     "qunit": "1.0.0",
+    "scriptlets": "https://github.com/AdguardTeam/Scriptlets.git",
     "utf8": "^3.0.0"
   },
   "main": "index.js",
