--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint": "eslint ./src/main"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1"
   }
 }
