--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./src/test/testrunner.js",
-    "lint": "eslint ./src/main"
+    "lint": "eslint ./src/main/"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
