--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "test": "node ./src/test/testrunner.js",
     "lint": "eslint ./src/main/"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1"
+    "eslint-config-standard": "^14.1.1",
+    "husky": "^4.2.3"
   }
 }
