--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.0.11",
     "jsdom": "13.0.0",
     "md5": "2.2.1",
