--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "dependencies": {
+    "@adguard/tsurlfilter": "^0.1.0",
     "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
