--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./src/test/testrunner.js",
+    "jest": "jest",
     "lint": "eslint ."
   },
   "husky": {
@@ -30,6 +31,7 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
-    "husky": "^4.2.3"
+    "husky": "^4.2.3",
+    "jest": "^26.1.0"
   }
 }
