--- a/package.json
+++ b/package.json
@@ -3,27 +3,23 @@
   "version": "1.0.57",
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
-  "dependencies": {
-    "@adguard/tsurlfilter": "^0.1.0",
-    "ajv": "^6.10.2",
-    "child_process": ">=1.0.2",
-    "crypto": "1.0.1",
-    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.0.14",
-    "jsdom": "13.0.0",
-    "md5": "2.2.1",
-    "moment": "^2.24.0",
-    "scriptlets": "https://github.com/AdguardTeam/Scriptlets.git#v1.2.5",
-    "utf8": "^3.0.0"
-  },
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "lint": "eslint ."
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint"
-    }
+  "dependencies": {
+    "@adguard/tsurlfilter": "^0.1.0",
+    "ajv": "^6.10.2",
+    "child_process": ">=1.0.2",
+    "crypto": "1.0.1",
+    "extended-css": "https://github.com/AdguardTeam/ExtendedCss.git#v1.2.9",
+    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.0.14",
+    "jsdom": "^16.3.0",
+    "md5": "2.2.1",
+    "moment": "^2.24.0",
+    "scriptlets": "https://github.com/AdguardTeam/Scriptlets.git#v1.2.5",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -31,5 +27,10 @@
     "eslint-plugin-import": "^2.20.2",
     "husky": "^4.2.3",
     "jest": "^26.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   }
 }
