--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -17,7 +17,7 @@ stages:
 Test:
   key: TEST
   docker:
-    image: ${bamboo.dockerNode}
+    image: "${bamboo.dockerNode}"
     volumes:
       ${bamboo.tmp.directory}/yarn: /usr/local/share/.cache/yarn/v6
     docker-run-arguments:
@@ -37,7 +37,7 @@ Test:
         interpreter: SHELL
         scripts:
           - |-
-            chown -R ${bamboo.hostUid}:${bamboo.hostGid} /usr/local/share/.cache/yarn/v6
+            chown -R "${bamboo.hostUid}":"${bamboo.hostGid}" /usr/local/share/.cache/yarn/v6
     - clean
   requirements:
     - adg-docker: 'true'
