--- a/bamboo-specs/bamboo.yaml
+++ b/bamboo-specs/bamboo.yaml
@@ -19,7 +19,7 @@ Test:
   docker:
     image: "${bamboo.dockerNode}"
     volumes:
-      ${bamboo.tmp.directory}/yarn: /usr/local/share/.cache/yarn/v6
+      ${bamboo.tmp.directory}/yarn: "${bamboo.yarnCache}"
     docker-run-arguments:
       - --net=host
   tasks:
@@ -37,7 +37,7 @@ Test:
         interpreter: SHELL
         scripts:
           - |-
-            chown -R "${bamboo.hostUid}":"${bamboo.hostGid}" /usr/local/share/.cache/yarn/v6
+            chown -R "${bamboo.hostUid}":"${bamboo.hostGid}" "${bamboo.yarnCache}"
     - clean
   requirements:
     - adg-docker: 'true'
