--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -5,7 +5,7 @@ plan:
   key: FILTRCOMPINC
   name: filters-compiler - increment version
 variables:
-  dockerNode: adguard/jsl-builder:15.8.0--1.22.5--1
+  dockerJslBuilder: adguard/jsl-builder:15.8.0--1.22.5--1
 
 stages:
   - Increment:
@@ -17,7 +17,7 @@ stages:
 Increment:
   key: INCR
   docker:
-    image: ${bamboo.dockerNode}
+    image: ${bamboo.dockerJslBuilder}
     volumes:
       ${system.YARN_DIR}: "${bamboo.yarnCache}"
   tasks:
