--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adguard-filters-compiler",
-  "version": "1.1.19",
+  "version": "1.1.20",
   "description": "Adguard filters compiler",
   "homepage": "http://adguard.com",
   "main": "index.js",
@@ -15,7 +15,7 @@
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
     "extended-css": "git+https://github.com/AdguardTeam/ExtendedCss.git#v1.3.12",
-    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.1.1",
+    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#948e7b3f189cac439684c742290d82295349145a",
     "jsdom": "^16.3.0",
     "md5": "2.2.1",
     "moment": "^2.24.0",
