--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
     "extended-css": "git+https://github.com/AdguardTeam/ExtendedCss.git#v1.3.12",
-    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#948e7b3f189cac439684c742290d82295349145a",
+    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.1.3",
     "jsdom": "^16.3.0",
     "md5": "2.2.1",
     "moment": "^2.24.0",
