remove node_modules for bamboo builds

--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -30,7 +30,8 @@ Test:
         scripts:
           - |-
             yarn install
-            yarn run test
+            yarn test
+            rm -rf node_modules
   requirements:
     - adg-docker: 'true'
 
