--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "increment": "yarn version --patch --no-git-tag-version"
   },
   "dependencies": {
+    "@adguard/scriptlets": "^1.5.4",
     "@adguard/tsurlfilter": "0.7.17",
     "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
@@ -19,7 +20,6 @@
     "jsdom": "^16.3.0",
     "md5": "2.2.1",
     "moment": "^2.24.0",
-    "scriptlets": "git+https://github.com/AdguardTeam/Scriptlets.git#v1.4.3",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
