--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@adguard/scriptlets": "^1.5.4",
-    "@adguard/tsurlfilter": "0.7.17",
+    "@adguard/tsurlfilter": "^0.7.41",
     "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
