--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
     "extended-css": "git+https://github.com/AdguardTeam/ExtendedCss.git#v1.3.12",
-    "@adguard/filters-downloader": "v1.1.8",
+    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#f348711",
     "jsdom": "^16.3.0",
     "md5": "2.2.1",
     "moment": "^2.24.0",
