fixed specification for test

--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -29,6 +29,8 @@ Test:
         interpreter: SHELL
         scripts:
           - |-
+            set -e
+            set -x
             yarn install
             yarn test
             rm -rf node_modules
