update resources, create tag while increment
Squashed commit of the following:

commit 0a40ac114c12777d4005597a83ca7f52b37fc201
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 2 17:36:21 2022 +0300

    add build-txt for tagging

commit e6b91734cceb04a6a993f5273ebfb690d26c34cf
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue May 31 14:23:13 2022 +0300

    create tag while increment

commit ae23b33e938227c4749f721c6aa91b9151d34f89
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue May 31 12:57:20 2022 +0300

    fix gitignore

commit 7ee75105451df1ab593b5b070c3c39115444563c
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue May 31 12:54:42 2022 +0300

    update tsurlfilter to v1.0.3

commit a81fe41eb4b940bc821b06f753af7ea1d0a51b0d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon May 30 22:10:06 2022 +0300

    update scriptlets to v1.6.18

commit 1d323edf30a12028cbb560e632def597efaf1bc8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon May 30 22:09:23 2022 +0300

    update ext-css to v1.3.14

commit f12d0b801b0a07f3ebd49df989012e25a11fab21
Merge: d922eea f28b070
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon May 30 22:06:09 2022 +0300

    Merge branch 'master' into feature/update_resources

commit d922eeabce2b8cdc4d4bdd71b4d69fbcf65d6746
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 11 13:15:27 2022 +0300

    update scriptlets and tsurlfilter

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+dist
 node_modules
 .idea
 *.iml
@@ -7,6 +8,7 @@ src/test/resources/log.txt
 src/test/resources/report.txt
 src/test/resources/report_platforms.txt
 src/test/resources/log_platforms.txt
+src/test/resources/bad-filters/*/diff.txt
 src/test/resources/filters/*/diff.txt
 src/test/resources/filters/*/filter.txt
 src/test/resources/filters/*/revision.json
