--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -33,11 +33,21 @@ Increment:
             set -e
             ls -alt
             yarn increment
+            yarn build-txt
     - any-task:
         plugin-key: com.atlassian.bamboo.plugins.vcs:task.vcs.commit
         configuration:
           commitMessage: 'skipci: Automatic increment build number'
           selectedRepository: defaultRepository
+    - inject-variables:
+        file: dist/build.txt
+        scope: RESULT
+        namespace: inject
+    - any-task:
+        plugin-key: com.atlassian.bamboo.plugins.vcs:task.vcs.tagging
+        configuration:
+          selectedRepository: defaultRepository
+          tagName: v${bamboo.inject.version}
   requirements:
     - adg-docker: 'true'
 
