--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "increment": "yarn version --patch --no-git-tag-version"
+    "increment": "yarn version --patch --no-git-tag-version",
+    "build-txt": "node tasks/build-txt.js"
   },
   "dependencies": {
-    "@adguard/scriptlets": "^1.6.6",
-    "@adguard/tsurlfilter": "^0.7.74",
+    "@adguard/scriptlets": "^1.6.18",
+    "@adguard/tsurlfilter": "^1.0.3",
     "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
-    "extended-css": "git+https://github.com/AdguardTeam/ExtendedCss.git#v1.3.12",
+    "extended-css": "git+https://github.com/AdguardTeam/ExtendedCss.git#v1.3.14",
     "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.1.12",
     "jsdom": "^16.3.0",
     "md5": "2.2.1",
