AG-14350 fix tryDownloadFile retry
Squashed commit of the following:

commit 40a6f893f9475af6ecad40af181d2c2e78b4cc7e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 13:40:40 2022 +0300

    fix quotes

commit 85de8ade3ce0b26b14149e98053a7bbe0ccd62de
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:24:03 2022 +0300

    revert prev revertion

commit e035599f41df8d18d9d1d7befadb4b93c7be3dc9
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:21:14 2022 +0300

    revert any retry for tryDownloadFile

commit 9f13d511541d51e4aee5940384715883ad2f5891
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:16:06 2022 +0300

    custom RETRY_TIME_SEC

commit 744cf344eeb44f33101aa92b8c6dc13af7f20b81
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:12:11 2022 +0300

    use retry-delay for tryDownloadFile

commit ce48b656b7e6c8ba38bca26d4cb0e0ee37658199
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:06:39 2022 +0300

    no curl version logging

commit 4ecf23dfe6d9a3febf4015254a95a61a695a4e7b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:05:56 2022 +0300

    wrap USER_AGENT in quotes for curl args

commit d6814146a5ca51344dda09acd8e2e416b6c8516f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:03:18 2022 +0300

    log curl version

commit d8fd8f6179e34a21b35fc647c1d2f242f582a2cf
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Aug 16 00:02:35 2022 +0300

    fix mixed logs in specs

commit 81bbb6bc72f37f2f9299de31accd21b9cafcac53
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 15 23:54:00 2022 +0300

    update dockerJslBuilder

commit 8760395cdd45a8b80330c7fe565748f4b1846dc0
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 15 23:49:36 2022 +0300

    add retryNum as string to curl args

commit d30fab8053cc9415337550d2e9d3bd15632e4b11
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Aug 15 23:48:46 2022 +0300

--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -5,7 +5,7 @@ plan:
   key: FILTRCOMPINC
   name: filters-compiler - increment version
 variables:
-  dockerJslBuilder: adguard/jsl-builder:15.8.0--1.22.5--1
+  dockerJslBuilder: adguard/jsl-builder:15.14--2
 
 stages:
   - Increment:
@@ -32,6 +32,10 @@ Increment:
             set -x
             set -e
             ls -alt
+
+            # Fix mixed logs
+            exec 2>&1
+
             yarn increment
             yarn build-txt
     - any-task:
