--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -5,7 +5,7 @@ plan:
   key: FILTRCOMPSPECS
   name: filters-compiler - test
 variables:
-  dockerJslBuilder: adguard/jsl-builder:15.8.0--1.22.5--1
+  dockerJslBuilder: adguard/jsl-builder:15.14--2
 
 stages:
   - Test:
@@ -31,6 +31,10 @@ Test:
           - |-
             set -e
             set -x
+
+            # Fix mixed logs
+            exec 2>&1
+
             yarn install
             yarn test
             rm -rf node_modules
