AG-16443 update extended-css to v2.0.5
Squashed commit of the following:

commit 7ebf547e17d9e8aea0f558f8c9f77b10ed840472
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 8 11:04:52 2022 +0200

    uncomment few tests

commit a58015c453cb849188dff3e756c5b002548167c5
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 8 11:03:22 2022 +0200

    update extended-css to v2.0.5, tsurlfilter to v1.0.46

commit b238bd54c86f1bcfb9725126365fd13357227679
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Nov 3 20:22:45 2022 +0200

    fix tests

commit 1c00be1d5c2a82ab67466a20363befa8999f7d67
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Nov 3 20:22:30 2022 +0200

    update extended-css to v2.0.4

commit 0fd69fee5a3f00c86be70dfdd3a8bbc2490e70d1
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 1 16:12:13 2022 +0200

    fix package.json description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adguard-filters-compiler",
   "version": "1.1.58",
-  "description": "Adguard filters compiler",
+  "description": "AdGuard filters compiler",
   "homepage": "http://adguard.com",
   "main": "index.js",
   "scripts": {
@@ -11,12 +11,12 @@
     "build-txt": "node tasks/build-txt.js"
   },
   "dependencies": {
+    "@adguard/extended-css": "^2.0.5",
     "@adguard/scriptlets": "^1.6.55",
-    "@adguard/tsurlfilter": "^1.0.42",
+    "@adguard/tsurlfilter": "^1.0.46",
     "ajv": "^6.10.2",
     "child_process": ">=1.0.2",
     "crypto": "1.0.1",
-    "extended-css": "git+https://github.com/AdguardTeam/ExtendedCss.git#v1.3.14",
     "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.1.12",
     "jsdom": "^16.3.0",
     "md5": "2.2.1",
