--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -5,7 +5,7 @@ plan:
   key: FILTRCOMPSPECS
   name: filters-compiler - test
 variables:
-  dockerJslBuilder: adguard/jsl-builder:15.14--2
+  dockerContainer: adguard/node-ssh:16.17--1
 
 stages:
   - Test:
@@ -19,7 +19,7 @@ Test:
   other:
     clean-working-dir: true
   docker:
-    image: "${bamboo.dockerJslBuilder}"
+    image: "${bamboo.dockerContainer}"
     volumes:
       ${system.YARN_DIR}: "${bamboo.yarnCache}"
   tasks:
