--- a/package.json
+++ b/package.json
@@ -8,31 +8,27 @@
     "test": "jest",
     "lint": "eslint .",
     "increment": "yarn version --patch --no-git-tag-version",
-    "build-txt": "node tasks/build-txt.js"
+    "build-txt": "node tasks/build-txt.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@adguard/extended-css": "^2.0.5",
     "@adguard/scriptlets": "^1.6.55",
     "@adguard/tsurlfilter": "^1.0.46",
-    "ajv": "^6.10.2",
+    "ajv": "^8.11.0",
     "child_process": ">=1.0.2",
-    "crypto": "1.0.1",
     "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.1.12",
-    "jsdom": "^16.3.0",
-    "md5": "2.2.1",
-    "moment": "^2.24.0",
+    "jsdom": "^20.0.2",
+    "md5": "2.3.0",
+    "moment": "^2.29.4",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "husky": "^4.2.3",
-    "jest": "^26.6.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint ; yarn test"
-    }
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.0",
+    "jest-environment-jsdom": "^29.3.0"
   }
 }
