update scriptlets to v1.9.57. AG-24234
Squashed commit of the following:

commit 94197326d281a9d1c41f28f4e6d1506f545c1447
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 21 18:18:01 2023 +0300

    add test github workflow

commit 4115779c86fbeabde1fb47013c0fd982d6a56ec4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 21 18:17:41 2023 +0300

    lint during bamboo test specs

commit 417c2b91912037a9a2b1879c7e6cec7249d10d84
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 21 18:06:46 2023 +0300

    fix linter

commit 007e3d2dc8fd4ef01863002b34313ec841b26df2
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 21 18:06:18 2023 +0300

    update scriptlets to v1.9.57

--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -36,7 +36,9 @@ Test:
             exec 2>&1
 
             yarn install
+            yarn lint
             yarn test
+
             rm -rf node_modules
   requirements:
     - adg-docker: 'true'
