--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -5,12 +5,12 @@ plan:
   key: FILTRCOMPINC
   name: filters-compiler - increment version
 variables:
-  dockerContainer: adguard/node-ssh:16.17--1
+  dockerNode: adguard/node-ssh:18.13--1
 
 stages:
   - Increment:
-      manual: 'false'
-      final: 'false'
+      manual: false
+      final: false
       jobs:
         - Increment
 
@@ -24,7 +24,7 @@ Increment:
       ${system.YARN_DIR}: "${bamboo.yarnCache}"
   tasks:
     - checkout:
-        force-clean-build: 'true'
+        force-clean-build: true
     - script:
         interpreter: SHELL
         scripts:
@@ -37,28 +37,18 @@ Increment:
             exec 2>&1
 
             yarn increment
-            yarn build-txt
     - any-task:
         plugin-key: com.atlassian.bamboo.plugins.vcs:task.vcs.commit
         configuration:
           commitMessage: 'skipci: Automatic increment build number'
           selectedRepository: defaultRepository
-    - inject-variables:
-        file: dist/build.txt
-        scope: RESULT
-        namespace: inject
-    - any-task:
-        plugin-key: com.atlassian.bamboo.plugins.vcs:task.vcs.tagging
-        configuration:
-          selectedRepository: defaultRepository
-          tagName: v${bamboo.inject.version}
   requirements:
-    - adg-docker: 'true'
+    - adg-docker: true
 
 branches:
   create: manually
   delete: never
-  link-to-jira: 'true'
+  link-to-jira: true
 
 notifications: []
 labels: []
