--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -5,12 +5,12 @@ plan:
   key: FILTRCOMPSPECS
   name: filters-compiler - test
 variables:
-  dockerContainer: adguard/node-ssh:16.17--1
+  dockerNode: adguard/node-ssh:18.13--1
 
 stages:
   - Test:
-      manual: 'false'
-      final: 'false'
+      manual: false
+      final: false
       jobs:
         - Test
 
@@ -24,7 +24,7 @@ Test:
       ${system.YARN_DIR}: "${bamboo.yarnCache}"
   tasks:
     - checkout:
-        force-clean-build: 'true'
+        force-clean-build: true
     - script:
         interpreter: SHELL
         scripts:
