fix docker image in specs
Squashed commit of the following:

commit d30e495fc00e1b985d667cc4b2a877860ab103aa
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 12:10:27 2023 +0300

    fix docker image in specs

--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -19,7 +19,7 @@ Increment:
   other:
     clean-working-dir: true
   docker:
-    image: ${bamboo.dockerContainer}
+    image: ${bamboo.dockerNode}
     volumes:
       ${system.YARN_DIR}: "${bamboo.yarnCache}"
   tasks:
