--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -19,7 +19,7 @@ Test:
   other:
     clean-working-dir: true
   docker:
-    image: "${bamboo.dockerContainer}"
+    image: "${bamboo.dockerNode}"
     volumes:
       ${system.YARN_DIR}: "${bamboo.yarnCache}"
   tasks:
