update filters-downloader to v1.1.20. AG-26168
Squashed commit of the following:

commit 508677ea38e8a7401ed47da22e3ec4cb8ab0a301
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 12:14:52 2023 +0300

    update changelog

commit dcebbbb283c8b3b6edbe7a293f90312eb49f51ff
Merge: afec322 cc5c42f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 12:13:34 2023 +0300

    Merge branch 'master' into feature/AG-26168

commit afec322429d56988f71d395459b28932aa2e7f33
Merge: 13b28c0 fa168d3
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 12:05:17 2023 +0300

    Merge branch 'master' into feature/AG-26168

commit 13b28c0d5ab78248306f6c139fcdd72b4a41a4da
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 00:41:54 2023 +0300

    fix tests

commit 36789f83fbcbf850ea716d968f6cf47cea651a1f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 00:27:20 2023 +0300

    improve tests

commit 948e2765f6182bc8d9c3dbea31261606c38130b4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 00:01:23 2023 +0300

    fix filters-downloader import

commit 68d5179c9172ef97d86dc71ce8fd69b412d8fba3
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 00:00:06 2023 +0300

    update changelog

commit 5fd6f811af3b52547f32ea13fc4d976aa0ebba62
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 10 23:52:57 2023 +0300

    update filters-downloader to v1.1.20

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@adguard/extended-css": "^2.0.52",
+    "@adguard/filters-downloader": "^1.1.20",
     "@adguard/scriptlets": "^1.9.72",
     "@adguard/tsurlfilter": "2.1.11",
     "ajv": "^8.11.0",
     "child_process": ">=1.0.2",
-    "filters-downloader": "git+https://github.com/AdguardTeam/FiltersDownloader.git#v1.1.12",
     "jsdom": "^21.1.1",
     "md5": "2.3.0",
     "moment": "^2.29.4",
