fix build specs
Merge in ADGUARD-FILTERS/compiler from fix/build-specs-001 to master

Squashed commit of the following:

commit de22b92fc80f0a56e8e11553aff186fffd454b7d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 11 13:52:06 2023 +0300

    fix build specs

--- a/bamboo-specs/build.yaml
+++ b/bamboo-specs/build.yaml
@@ -38,7 +38,7 @@ Build:
 
             rm -rf node_modules
     - inject-variables:
-        file: build/build.txt
+        file: dist/build.txt
         scope: RESULT
         namespace: inject
     - any-task:
