exclude script exceptions #@%# rules for ubo. #199 AG-27593
Squashed commit of the following:

commit f3c54e3711225fb22d3194414d5af27c9ee418a8
Merge: 3be8d7c fa527e4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Nov 21 15:30:08 2023 +0200

    Merge branch 'master' into fix/AG-27593

commit 3be8d7ccff0662b3d63804fd4f812fd0416dd6ea
Merge: b67acce 9fcae27
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Nov 20 18:05:18 2023 +0200

    Merge branch 'master' into fix/AG-27593

commit b67acce618db39e4eab2b21223c29788e0e40dec
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Nov 20 15:51:41 2023 +0200

    add comment

commit 0f620944c8e5b8c65649d46385c0b3f839c3c525
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Nov 20 15:46:46 2023 +0200

    fix arrow-body-style eslint rule

commit e3bf1a491db4d0ba789a6a63ea1be6280ffaea37
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Nov 20 15:29:30 2023 +0200

    update changelog

commit 8b85d458acb5505822f843825a18b41606df6b0b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Nov 20 15:27:13 2023 +0200

    exclude exceptions during excludeScriptRules() for ext_ublock platform

commit 5752c9d2847a28d6e35e72085dc4eaf856794bd8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Nov 17 19:40:50 2023 +0200

    prepare tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -68,6 +68,7 @@
     "wrap-iife": "off",
     "func-names": "off",
     "no-shadow": "off",
+    "arrow-body-style": 0,
     "no-multi-spaces": [
       "error",
       {
