--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -38,11 +38,24 @@ Test:
             yarn install
             yarn lint
             yarn test
-
-            rm -rf node_modules
   requirements:
     - adg-docker: 'true'
+  final-tasks:
+      - script:
+          interpreter: SHELL
+          scripts:
+            - |-
+              set -x
+              set -e
 
+              # Fix mixed logs
+              exec 2>&1
+
+              ls -la
+
+              echo "Size before cleanup:" && du -h | tail -n 1
+              rm -rf node_modules
+              echo "Size after cleanup:" && du -h | tail -n 1
 branches:
   create: for-pull-request
   delete:
