--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@adguard/tsurlfilter": "2.2.19",
     "ajv": "^8.11.0",
     "child_process": ">=1.0.2",
+    "fs-extra": "^11.2.0",
     "jsdom": "^21.1.1",
     "md5": "2.3.0",
     "moment": "^2.29.4",
