AG-32036 add new `@include` directive option `optimizeDomainBlockingRules`
Squashed commit of the following:

commit bc5bf17f15138e86391a163c301d41185d14ea1e
Author: jellizaveta <e.egorova@adguard.com>
Date:   Tue May 7 12:38:41 2024 +0300

    update jsDoc

commit 3ca68f254abe99cdadfd45132c65f011a13d54fd
Author: jellizaveta <e.egorova@adguard.com>
Date:   Mon May 6 16:22:14 2024 +0300

    fix readme

commit 944669b31cc595adb664e5aa11499889778fbe97
Merge: 424b1f2 5834889
Author: jellizaveta <e.egorova@adguard.com>
Date:   Mon May 6 16:18:15 2024 +0300

    Merge branch 'fix/AG-32036' of ssh://bit.int.agrd.dev:7999/adguard-filters/compiler into fix/AG-32036

commit 424b1f2b0af8f674152b71308595cc49cfe1d13d
Author: jellizaveta <e.egorova@adguard.com>
Date:   Mon May 6 16:18:02 2024 +0300

    update script

commit 5834889b936345552db17d0dd5effbe3f4a10a17
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon May 6 16:09:04 2024 +0300

    src/main/utils/builder-utils.js edited online with Bitbucket

commit 1813a546a258f76026df66d4e002ff54f8f09e25
Author: jellizaveta <e.egorova@adguard.com>
Date:   Fri May 3 19:41:44 2024 +0300

    update readme

commit 52213c5b233d187b830f316d9895c4ad37f27cdb
Author: jellizaveta <e.egorova@adguard.com>
Date:   Fri May 3 19:39:27 2024 +0300

    fix indent

commit 7f87030149754dead591f51c3c4ffbdd28b46ff0
Author: jellizaveta <e.egorova@adguard.com>
Date:   Fri May 3 19:33:46 2024 +0300

    update readme, jsDoc. refactoring

commit 5778484053d7d97a2b378e828c7d8f0428e3689e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri May 3 19:02:51 2024 +0300

    src/main/utils/builder-utils.js edited online with Bitbucket

commit 0feb5a1fb38ff674c6e3203ed7ba5c08df90a0a4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri May 3 19:02:33 2024 +0300

    src/main/utils/builder-utils.js edited online with Bitbucket

commit 390862d6af1478f026a991567763df9528e9864d
Author: jellizaveta <e.egorova@adguard.com>
Date:   Fri May 3 18:16:08 2024 +

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsdom": "^21.1.1",
     "md5": "2.3.0",
     "moment": "^2.29.4",
+    "tldts": "^6.1.18",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
