AG-40062 require group description during schema validation
Squashed commit of the following:

commit d7aa90105d7b7f22f36733ee5c6815e00ed0f5d5
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 10:49:28 2025 -0400

    fix jsdoc

commit 133a513c32c00995696b81f4367df61c1615173f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 10:43:57 2025 -0400

    fix jsdoc

commit fdee5a60b32f1759ce6c4e5127c797886c1d194a
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 10:42:50 2025 -0400

    bump version

commit b3dd90db56b33b5420a3f698621b3b8954b09d9f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 10:31:10 2025 -0400

    update readme

commit 0b566491c9316e4760e6aac083dc53f2c0147d35
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 10:08:03 2025 -0400

    fix todo

commit d7aa3cebb9d0a710c8142099b7ed1a9069218df8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Apr 17 10:00:14 2025 -0400

    add comments to NON_REQUIRED_FILTER_IDS

commit 6877555cedbefcf6f362103a2abe0089f4c93a6e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 16 20:04:26 2025 -0400

    fix changelog

commit f38be3ef4cf889c7bf3bb6b40b35f2102fa9258b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 16 16:08:34 2025 -0400

    fix changelog

commit 445350f0b891207f85275cf838e133b20a42779f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 16 15:48:26 2025 -0400

    Revert "pack tgz temporary"
    
    This reverts commit 10986b88ee913d7cba9aeb48097bf65b4e22fe68.

commit 10986b88ee913d7cba9aeb48097bf65b4e22fe68
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 16 15:48:15 2025 -0400

    pack tgz temporary

commit 37fc56ec24431691aee31259d8213eea3fd6da2f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 16 15:41:44 2025 -0400

    add NON_REQUIRED_FILTER_IDS

commit 3584922ce5e5af8eed20de08017f1dbb1671883c
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Apr 11 19:01:54 2025 -04

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adguard-filters-compiler",
-  "version": "1.1.154",
+  "version": "1.2.0",
   "description": "AdGuard filters compiler",
   "homepage": "http://adguard.com",
   "main": "index.js",
@@ -8,6 +8,7 @@
     "test": "jest",
     "lint": "eslint .",
     "increment": "yarn version --patch --no-git-tag-version",
+    "build-schemas": "node tasks/build-schemas/index.js",
     "build-txt": "node tasks/build-txt.js",
     "prepare": "husky install"
   },
@@ -16,7 +17,7 @@
     "@adguard/filters-downloader": "^2.2.4",
     "@adguard/scriptlets": "^1.11.16",
     "@adguard/tsurlfilter": "2.2.23",
-    "ajv": "^8.11.0",
+    "ajv": "^8.17.1",
     "child_process": ">=1.0.2",
     "jsdom": "^21.1.1",
     "md5": "2.3.0",
