AG-35542 Update specs with pnpm
Squashed commit of the following:

commit 20df05f00e5dd789d46c63fb720874dbbc912fc9
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jun 26 20:22:46 2025 +0300

    update pnpm

commit d7c1fda621ba5e06537bd5af83e2b065450aeb9e
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jun 26 20:15:51 2025 +0300

    change pnpm

commit 9fd415f3eee759dbec1d0758eb5c52266737d32d
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jun 26 19:49:57 2025 +0300

    updatye cahngelog

commit b659601869d19f66cb0e8c17bc202f5961e63284
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jun 26 19:42:07 2025 +0300

    update eslint ignore and add comma

commit c1e3eadd83f5c987d656ebf40b8d0ad180da7076
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jun 26 19:41:36 2025 +0300

    AG-35542 Add pnpm in specs and fix build-schemas script

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,14 +18,14 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: yarn install
-        run: yarn install
+      - name: pnpm install
+        run: pnpm install
 
-      - name: yarn lint
-        run: yarn lint
+      - name: pnpm lint
+        run: pnpm lint
 
-      - name: yarn test
-        run: yarn test
+      - name: pnpm test
+        run: pnpm test
 
   notify:
     needs:
