--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -21,7 +21,7 @@ Increment:
   docker:
     image: ${bamboo.dockerNode}
     volumes:
-      ${system.YARN_DIR}: "${bamboo.yarnCache}"
+      ${system.PNPM_DIR}: "${bamboo.cachePnpm}"
   tasks:
     - checkout:
         force-clean-build: true
@@ -36,7 +36,7 @@ Increment:
             # Fix mixed logs
             exec 2>&1
 
-            yarn increment
+            pnpm increment
     - any-task:
         plugin-key: com.atlassian.bamboo.plugins.vcs:task.vcs.commit
         configuration:
