--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Github Release
 
 env:
   NODE_VERSION: 22
+  PNPM_VERSION: 10.7.1
 
 # Workflow need write access to the repository to create a GitHub release
 permissions:
@@ -34,13 +35,19 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://registry.npmjs.org
           cache: pnpm
-
+      
       - name: Install dependencies
         run: pnpm install
 
