--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,7 @@ name: Test FiltersCompiler
 
 env:
   NODE_VERSION: 22
+  PNPM_VERSION: 10.7.1
 
 on:
   push
@@ -18,7 +19,13 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: pnpm install
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
+
+      - name: Install dependencies
         run: pnpm install
 
       - name: pnpm lint
