AG-35542 Add dist dir, @adguard/logger, update: scriptlets, tsurlfilter, agtree
Squashed commit of the following:

commit 990d40ca5ebe4da0d39fe0571b01bb3f25fafd92
Author: Elizaveta <e.egorova@adguard.com>
Date:   Wed Jul 9 17:32:11 2025 +0300

    increment

commit eb1b44fa695a899be4bb79e7a6d8639af0869e7b
Author: Dávid Tóta <d.tota@adguard.com>
Date:   Wed Jul 9 12:25:12 2025 +0300

    Applied suggestion

commit 6df05a0e4d8a818bc15854ffba703149a122bbe6
Author: Elizaveta <e.egorova@adguard.com>
Date:   Wed Jul 9 12:24:54 2025 +0300

    update changelog

commit 5cf4442ffc3f7554ebb426b1b6fc289bcd3f8c11
Author: Elizaveta <e.egorova@adguard.com>
Date:   Tue Jul 8 23:02:17 2025 +0300

    revert

commit 91749a64f1170d7da5a31e630968494bd90b5404
Author: Elizaveta <e.egorova@adguard.com>
Date:   Tue Jul 8 23:01:35 2025 +0300

    update version

commit fdc780dfe1818f7e566663722835bd74642f27ae
Author: Elizaveta <e.egorova@adguard.com>
Date:   Tue Jul 8 22:56:31 2025 +0300

    fix test

commit 88ae8100a85bbb7ae78a8b4b8ec116c938c9ae32
Author: Elizaveta <e.egorova@adguard.com>
Date:   Tue Jul 8 22:55:05 2025 +0300

    update scriptlets, agtree, tsurlfilter

commit 29eb4c6da0e0c7a066935684a9f92b1b4e23393b
Author: Elizaveta <e.egorova@adguard.com>
Date:   Mon Jun 30 17:25:12 2025 +0300

    remove json5

commit 0269eada02ec36e5c442f4eca0c3ffde190b3122
Author: Elizaveta <e.egorova@adguard.com>
Date:   Mon Jun 30 12:19:52 2025 +0300

    change default to import

commit 6cfad82b329971cd57d68a4413b1bb4df8d6f984
Author: Elizaveta <e.egorova@adguard.com>
Date:   Fri Jun 27 17:36:09 2025 +0300

    add build

commit 0d1cc3b398209e18d650f0a6b59feb7249f8447e
Author: Elizaveta <e.egorova@adguard.com>
Date:   Fri Jun 27 17:31:18 2025 +0300

    remove main field

commit 1d38ef0bb365510583bca29eb3cf26d25dd26e8c
Author: Elizaveta <e.egorova@adguard.com>
Date:   Fri Jun 27 17:27:58 2025 +0300

    add to gitignore

commit 725ff7e951eded3d11b8db6889f9d91f2138d88c
Merge: 4b18cd0 b9fbfa5
Auth

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@ node_modules
 .eslintcache
 *.iml
 pnpm-error.log
-src/test/resources/platforms/*
-src/test/resources/log.txt
-src/test/resources/report.txt
-src/test/resources/report_platforms.txt
-src/test/resources/log_platforms.txt
-src/test/resources/bad-filters/*/diff.txt
-src/test/resources/filters/*/diff.txt
-src/test/resources/filters/*/filter.txt
-src/test/resources/filters/*/revision.json
+test/resources/platforms/*
+test/resources/log.txt
+test/resources/report.txt
+test/resources/report_platforms.txt
+test/resources/log_platforms.txt
+test/resources/bad-filters/*/diff.txt
+test/resources/filters/*/diff.txt
+test/resources/filters/*/filter.txt
+test/resources/filters/*/revision.json
