--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -36,6 +36,7 @@ Test:
             exec 2>&1
 
             pnpm install
+            pnpm build
             pnpm lint
             pnpm test
   requirements:
