AG-35542 Add cjs to build
Squashed commit of the following:

commit 9bfed2be8c718b07e0875d4872948c75d4aa00f4
Author: Elizaveta <e.egorova@adguard.com>
Date:   Mon Jul 21 11:51:31 2025 +0300

    update changelog date

commit de42588bbf53a80f6f229b80f275dc8dc5f64ca3
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jul 18 15:21:04 2025 -0400

    fix dockerNode in specs

commit 9bd60239d14b86e0090f71c5b02a5bb85dc68a8d
Author: Elizaveta <e.egorova@adguard.com>
Date:   Fri Jul 18 12:59:19 2025 +0300

    update changelog date

commit dfd2f9d1ba619a62b35463f5de3575c3438a40c6
Author: Dávid Tóta <d.tota@adguard.com>
Date:   Fri Jul 18 12:58:19 2025 +0300

    Applied suggestion

commit 6c3e39416ae380be40c3f693905a6635153a9b11
Author: Elizaveta <e.egorova@adguard.com>
Date:   Fri Jul 11 18:28:38 2025 +0300

    update cangelog

commit 3f24d7d0e53a4c2a3940ce90487deb53fdfb5d64
Author: Elizaveta <e.egorova@adguard.com>
Date:   Fri Jul 11 17:23:52 2025 +0300

    Add cjs to build

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     ],
     "exports": {
         ".": {
-            "import": "./dist/index.js"
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs"
         }
     },
     "scripts": {
