Pull request 345: AG-44392 Add deploy to npmjs
Squashed commit of the following:

commit 3b0cda9aaf14fa91721437a16df79ead10c307ca
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jul 24 16:52:34 2025 +0300

    manual increment

commit 7cca3ebb640e65f6afeadac4de2401b7d09ddbe6
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jul 24 16:04:49 2025 +0300

    update bamboo

commit 59050a81daa34f9aee0fae2de9d78ae801dbe9b3
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jul 24 14:20:33 2025 +0300

    remove increment

commit 5bf73ef3b881280a6c5a7ac916eeefd33d3f22c1
Author: Atlassian Bamboo <bamboo@example.com>
Date:   Thu Jul 24 14:16:35 2025 +0300

    skipci: Automatic increment build number

commit 20e8ac55492ec014d992e93273941c1285fe1a90
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jul 24 14:16:25 2025 +0300

    update changelog

commit e1509189f03a43de2dc773abbc230eb770d7605f
Author: Elizaveta <e.egorova@adguard.com>
Date:   Thu Jul 24 14:15:40 2025 +0300

    update cnagelog

commit 7c07166ed14a97e85605ff95a02e37ed82a9f279
Author: Atlassian Bamboo <bamboo@example.com>
Date:   Wed Jul 23 17:53:07 2025 +0300

    skipci: Automatic increment build number

commit c02ac24f820fdeb31435000d8eca9a77beea964b
Author: Elizaveta <e.egorova@adguard.com>
Date:   Wed Jul 23 17:52:52 2025 +0300

    update changelog version

commit 9d893ddd1ff4b52431c3132c64d2d8e8a372a62b
Author: Atlassian Bamboo <bamboo@example.com>
Date:   Wed Jul 23 17:50:43 2025 +0300

    skipci: Automatic increment build number

commit ad395caa661ec928b6a5550ce98dad50bdfbeb00
Author: Elizaveta <e.egorova@adguard.com>
Date:   Wed Jul 23 17:50:33 2025 +0300

    update version

commit 0200cb50c9b5c0595e5851c54aed6c00d1e211b7
Author: Elizaveta <e.egorova@adguard.com>
Date:   Wed Jul 23 17:47:22 2025 +0300

    update version and changelog

commit 97a7710a479f337cbc14c7ea19509053ae852141
Author: Atlassian Bamboo <bamboo@example.com>
Date:   Tue Jul 22 17:40:57 2025 +0300

    skipci: Au

--- a/bamboo-specs/build.yaml
+++ b/bamboo-specs/build.yaml
@@ -36,6 +36,7 @@ Build:
             pnpm install ${bamboo.varsPnpm}
             pnpm build
             pnpm build-txt
+            pnpm pack --out filters-compiler.tgz
     - inject-variables:
         file: dist/build.txt
         scope: RESULT
@@ -61,6 +62,11 @@ Build:
             echo "Size before cleanup:" && du -h | tail -n 1
             rm -rf node_modules
             echo "Size after cleanup:" && du -h | tail -n 1
+  artifacts:
+    - name: filters-compiler.tgz
+      pattern: filters-compiler.tgz
+      shared: true
+      required: true
   requirements:
     - adg-docker: 'true'
 
