AG-47438 run cleanup script as final task in specs
Squashed commit of the following:

commit 6a96ea0b2ecbbf7470ba34c17f3c78292a3f4c01
Author: slvvko <v.leleka@adguard.com>
Date:   Wed Oct 22 23:57:00 2025 -0400

    make cleanup script executable

commit 59182a1811774ef0b9456336401056e723d213cf
Author: slvvko <v.leleka@adguard.com>
Date:   Wed Oct 22 23:53:21 2025 -0400

    run cleanup script as final task in specs

--- a/bamboo-specs/increment.yaml
+++ b/bamboo-specs/increment.yaml
@@ -42,8 +42,13 @@ Increment:
         configuration:
           commitMessage: 'skipci: Automatic increment build number'
           selectedRepository: defaultRepository
+  final-tasks:
+    - script:
+        interpreter: SHELL
+        scripts:
+          - "./bamboo-specs/scripts/cleanup.sh"
   requirements:
-    - adg-docker: true
+    - adg-docker: 'true'
 
 branches:
   create: manually
