--- a/bamboo-specs/tests.yaml
+++ b/bamboo-specs/tests.yaml
@@ -45,18 +45,7 @@ Test:
       - script:
           interpreter: SHELL
           scripts:
-            - |-
-              set -x
-              set -e
-
-              # Fix mixed logs
-              exec 2>&1
-
-              ls -la
-
-              echo "Size before cleanup:" && du -h | tail -n 1
-              rm -rf node_modules
-              echo "Size after cleanup:" && du -h | tail -n 1
+            - "./bamboo-specs/scripts/cleanup.sh"
 branches:
   create: for-pull-request
   delete:
