AG-48675 fix conversion of `:upward()` pseudo-class with selector list arg
Squashed commit of the following:

commit c5a2e72fe202e5b348530ef4ca29e3d8058b18e1
Author: slvvko <v.leleka@adguard.com>
Date:   Fri Nov 21 10:21:06 2025 -0500

    install deps

commit bf0b74d8179ac0d6515c84e73f62965fb90c5c9e
Author: slvvko <v.leleka@adguard.com>
Date:   Fri Nov 21 00:35:40 2025 -0500

    fix changelog

commit 5df368b133713aed7466a0fc978f566815ddd2e0
Merge: 45ced11 87981b1
Author: slvvko <v.leleka@adguard.com>
Date:   Fri Nov 21 00:29:39 2025 -0500

    merge parent branch into current one, resolve conflicts

commit 45ced110673c64f623ff562c9f4a1d091e9af9eb
Author: slvvko <v.leleka@adguard.com>
Date:   Fri Nov 21 00:27:59 2025 -0500

    prepare dependencies update

commit d6c25f7427d8f03a93289851b381bb35efa4baa7
Author: slvvko <v.leleka@adguard.com>
Date:   Fri Nov 21 00:21:09 2025 -0500

    add tests

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     },
     "dependencies": {
         "@adguard/agtree": "^3.3.0",
-        "@adguard/ecss-tree": "^1.1.0",
+        "@adguard/css-tokenizer": "^1.2.0",
+        "@adguard/ecss-tree": "^2.0.1",
+        "@eslint/css-tree": "3.6.6",
         "@adguard/extended-css": "^2.1.1",
         "@adguard/filters-downloader": "^2.4.0",
         "@adguard/logger": "^2.0.0",
